<resources>
    <string name="app_name">IPTV</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="password">输入终端密码解锁</string>
    <string name="password_error">您输入密码有误,请重新输入</string>

    <string name="disable">功能处于停用状态</string>
    <string name="disconnect">连接服务器失败</string>
    <string name="urlerror">url异常</string>
    <string name="downloadfail">下载失败</string>
    <string name="downloadsuccess">下载成功</string>
    <string name="noneconnent">请联系管理员添加内容</string>


    <string name="msginsname">计划插播：</string>
    <string name="insname">即时插播：</string>
    <string name="weekname">周计划插播：</string>

    <string name="hot">最 热</string>
    <string name="news">最 新</string>
    <string name="order">我的订单</string>
    <string name="cat">购物车</string>

    <string name="video_time">上一次观看到x,是否继续播放?</string>


    <string name="wifi_network">网络设置</string>
    <string name="wifi_ap">WIFI热点</string>
    <string name="wifi_ssid">网络\tSSID:</string>
    <string name="wifi_ssidname">AP</string>
    <string name="wifi_safe">安\t全\t性:</string>
    <string name="wifi_safetype">WAP2 PSK</string>
    <string name="wifi_psw">密\t \t \t码:</string>
    <string name="wifi_pswd">123456789</string>
    <string name="wifi_showpsw">显示密码</string>
    <string name="wifi_showpswd">(密码至少包含8个字符)</string>
    <string name="wifi_start">开启</string>
    <string name="wifi_onscuess">开启成功</string>
    <string name="wifi_onerror">开启失败</string>
    <string name="wifi_stop">关闭</string>
    <string name="wifi_oferror">关闭失败</string>
    <string name="wifi_ofscuess">关闭成功</string>
    <string name="wifi_fail">开启wifi热点失败，请检查你输入的ssid和密码是否正确!</string>


    <string name="usb_1">视频</string>
    <string name="usb_2">音乐</string>
    <string name="usb_3">图片</string>
    <string name="usb_4">文档</string>
    <string name="usb_5">其他</string>
    <string name="usb_in">检测到USB设备</string>
    <string name="usb_out">USB设备已拔出</string>
    <string name="usb_error">USB路径异常，该功能不适用于此机顶盒</string>

    <string name="title">满意度问卷调查表</string>
    <string name="tishi">\t\t尊敬的用户，您好!感谢您对我们工作的支持。请您根据自身感受填写这张表格，
        对我们的服务质量等方面给予真实的评价，以便我们改进工作，为您提供更好的服务。我们对本问卷的信息保密负责，谢谢合作!</string>
    <string name="my">1.满意</string>
    <string name="jbmy">2.基本满意</string>
    <string name="bmy">3.不满意</string>
    <string name="Ok">确\t定</string>

    <string name="notice_status">状态</string>
    <string name="notice_time">时间</string>
    <string name="notice_title">留言</string>
    <string name="notice_content">详细</string>


    <string name="shop_time">供应时间：</string>
    <string name="shop_sale">已售0份</string>
    <string name="shop_price">￥</string>
    <!--<string name="shop_dialog_tips">是否将</string>-->
    <string name="shop_dialog_tips">是否将</string>
    <string name="one">1</string>
    <string name="shop_dialog_tips3">份装进购物车?</string>
    <string name="shop_product_intro">商品描述</string>
    <string name="shop_clean_car">清空购物车</string>
    <string name="shop_clean_order">取消订单</string>
    <string name="shop_car_no">序号</string>
    <string name="shop_car_name">商品名称</string>
    <string name="shop_car_num">数量</string>
    <string name="shop_car_price">单价￥</string>
    <string name="shop_tolprice">总价￥</string>
    <string name="shop_allprice">合计(￥)：</string>
    <string name="shop_yuan">元</string>
    <string name="shop_cartnull">请先加入购物车!</string>
    <string name="shop_add_cart_scuess">添加购物车成功!</string>
    <string name="shop_clean_cart">确定清空购物车？</string>
    <string name="shop_clean_cart_scuess">清空成功!</string>
    <string name="shop_addorder">添加到订单!</string>
    <string name="shop_orderscu">下单成功!</string>
    <string name="shop_clean_orders">确定取消订单？</string>
    <string name="shop_clean_order_scuess">清空成功!</string>
    <string name="shop_ordernull">您还没有任何订单!</string>
    <string name="shop_order_ok">确定提交订单？</string>
    <string name="shop_tel">输入联系电话</string>
    <string name="shop_telerror">请输入正确的联系方式!</string>
</resources>
