<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <product.prison.view.custom.Head
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="107dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/left_list"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:background="@drawable/left_list_bg"></android.support.v7.widget.RecyclerView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:background="@drawable/right_grid_bg"
            android:orientation="vertical"
            android:paddingLeft="31dp"
            android:paddingTop="22dp"
            android:paddingRight="31dp"
            android:paddingBottom="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="27sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:lineSpacingExtra="5dp"
                android:text="@string/tishi"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <GridView
                android:id="@+id/satisfied_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:descendantFocusability="afterDescendants"
                android:listSelector="@color/transparent"
                android:numColumns="1"
                android:scrollbars="none"></GridView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/satisfied_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ok"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/fram_satisfied_ico" />


</FrameLayout>